book-service/book-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-service
spec:
  type: NodePort # optional
  ports:
    - nodePort: 30000 # optional
      port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: book-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-service-deployment
spec:
  selector:
    matchLabels:
      app: book-service
  replicas: 2
  template:
    metadata:
      labels:
        app: book-service
        version: v1
    spec:
      containers:
        - name: book-service
          image: hungcq/book-service:latest
          ports:
            - containerPort: 80
