book-service/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: book-service
spec:
  host: book-service
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: author-service
spec:
  host: author-service
  subsets:
    - name: v1
      labels:
        version: v1
