book-service/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: pscit
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pscit
spec:
  hosts:
    - "*"
  gateways:
    - pscit
  http:
    - match:
        - uri:
            prefix: /books
        - uri:
            prefix: /hihi
      route:
        - destination:
            host: book-service
            port:
              number: 80
    - match:
      - uri:
          prefix: /authors
      route:
        - destination:
            host: author-service
            port:
              number: 80
