book-service/routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: book-service
spec:
  hosts:
    - book-service
  http:
    - route:
      - destination:
          host: book-service
          subset: v1
        weight: 50
      - destination:
          host: book-service
          subset: v2
        weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: book-service
spec:
  host: book-service
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: author-service
spec:
  host: author-service
  subsets:
    - name: v1
      labels:
        version: v1
